--- a/proyect-python/webservice/static/css/cards/index_card.css
+++ b/proyect-python/webservice/static/css/cards/index_card.css
@@ -339,7 +339,7 @@ font-family: monospace;
   vertical-align: middle; }
   .page-home .overlay {
     background-color: rgba(14, 17, 24, 0.97);
-    background-image:url("../../img/imgCartas/f4.jpg");
+    background-image:url("../../images/images_cards/f4.jpg");
 }
 
 /* End of container */
