--- a/proyect-python/webservice/views/templates/card/template-cards-delete.html
+++ b/proyect-python/webservice/views/templates/card/template-cards-delete.html
@@ -51,7 +51,9 @@
                 </div>
                 <!-- End of table container -->
             <!-- Button back to menu -->
-            <a href="/index-card" class="btn btn-primary">Back to Menu</a>
+            <div class="button-container">
+                <a href="/index-figures" class="btn btn-primary">Back to Menu</a>
+            </div>
             </div>
         </div>
 
