--- a/proyect-python/webservice/views/templates/card/template-cards-read-api.html
+++ b/proyect-python/webservice/views/templates/card/template-cards-read-api.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon TCG Gallery</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/cards/search_cards.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/cards/search_figures.css') }}">
 </head>
 <body>
     <div class="container">
@@ -15,7 +15,7 @@
             </div>
             <div class="col-auto">
                 <button id="searchButton" class="btn btn-primary">Search</button>
-                <a href="/mainpage" class="btn btn-secondary">Main Menu</a>
+                <a href="/index-card" class="btn btn-secondary">Main Menu</a>
             </div>
         </div>
         <div class="row mt-3" id="cardsContainer">
