--- a/proyect-python/webservice/views/templates/index/index.html
+++ b/proyect-python/webservice/views/templates/index/index.html
@@ -6,7 +6,7 @@
     <title>Index</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index/index.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/index/product_cards.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/index/containers.css') }}">
   </head>
 
   <body>
@@ -42,7 +42,7 @@
                 <div class="content">
                   <h2>Trading Cards</h2>
                   <p><a>Get to know the cards from the TCG world that we offer you.</a></p>
-                  <img src="{{ url_for('static', filename='/img/imgMainPage/pokemon.gif') }}" alt="Pokemon" width="120" height="120">
+                  <img src="{{ url_for('static', filename='/images/images_main_menu/pokemon.gif') }}" alt="Pokemon" width="120" height="120">
                 </div>
               </div>
             </div>
@@ -54,7 +54,7 @@
       <section>
         <div class="container">
           <a href='/index-figures'  class="button-coleccionables">
-            <div class="background-img">
+            <div class="background-img-2">
               <div class="box">
                 <span></span>
                 <span></span>
@@ -63,7 +63,7 @@
                 <div class="content">
                   <h2>Collectible Figures</h2>
                   <p><a>Get to know the collectible figures we offer.</a></p>
-                  <img src="{{ url_for('static', filename='/img/imgMainPage/Imperialdramon.gif') }}" alt="Pokemon" width="120" height="120">
+                  <img src="{{ url_for('static', filename='/images/images_main_menu/Imperial_dramon.gif') }}" alt="Pokemon" width="120" height="120">
                 </div>
               </div>
             </div>
