--- a/proyect-python/webservice/views/templates/user/template-login.html
+++ b/proyect-python/webservice/views/templates/user/template-login.html
@@ -47,13 +47,13 @@
               <!-- Social media icons -->
               <div class="social-icons">
                 <a href="#!" class="social-icon" id="facebook-icon">
-                  <img src="{{ url_for('static', filename='/img/f1.png') }}" alt="Facebook" />
+                  <img src="{{ url_for('static', filename='/images/images_login/f1.png') }}" alt="Facebook" />
                 </a>
                 <a href="#!" class="social-icon" id="twitter-icon">
-                  <img src="{{ url_for('static', filename='img/t1.png') }}" alt="Twitter" />
+                  <img src="{{ url_for('static', filename='images/images_login/t1.png') }}" alt="Twitter" />
                 </a>
                 <a href="#!" class="social-icon" id="google-icon">
-                  <img src="{{ url_for('static', filename='img/g1.png') }}" alt="Google" />
+                  <img src="{{ url_for('static', filename='images/images_login/g1.png') }}" alt="Google" />
                 </a>
               </div>
 
