--- a/proyect-python/webservice/static/css/index/index.css
+++ b/proyect-python/webservice/static/css/index/index.css
@@ -97,7 +97,6 @@ h6 {
   }
 }
 
-
 *{
   margin:0;
   padding:0;
@@ -109,37 +108,7 @@ body{
   background-color: #111845;
 }
 
-.background-img{
-  background-image: url("../../img/imgCartas/f2.png");
-height: 400px;
-  width: 800px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin: 5% auto;
-  padding:20px;
-  border: 1px solid #2a3cad;
-  border-radius: 4px;
-  box-shadow: 0px 0px 5px #2a3cad;
-  position: relative;
-}
-
 .content h2{ font-size:19px;}
-
-.box{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 300px;
-  height: 300px;
-  background: #111845a6;
-  box-sizing: border-box;
-  overflow: hidden;
-  box-shadow: 0 20px 50px rgb(23, 32, 90);
-  border: 2px solid #2a3cad;
-  color: white;
-  padding: 20px;
-}
 
 .box:before{
   content: '';
@@ -238,4 +207,15 @@ height: 400px;
   }
 
 
-} 
+}
+h2 {
+    background-color: #28a745; /* Green background color */
+    color: white;             /* Text color (white for contrast with the green background) */
+    border-radius: 12px;      /* Rounded corners (12px radius) */
+    padding: 10px 20px;       /* Padding inside the element (10px top and bottom, 20px left and right) */
+    display: inline-block;    /* Adjusts the size of the background to fit the content */
+    text-align: center;       /* Centers the text inside the element */
+    font-family: Arial, sans-serif; /* Font family for the text */
+    font-size: 1.5em;         /* Font size (1.5 times the normal size) */
+    margin: 0;                /* Removes default margin */
+}
